--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "pnpm run build"
   publish = "dist"
   functions = "netlify/functions"
 
 [dev]
-  command = "npm run dev"
+  command = "pnpm run dev"
   port = 5173
   targetPort = 5173
 
