--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.11.0",
+    "i18next": "^23.0.0",
+    "i18next-browser-languagedetector": "^8.1.0",
     "input-otp": "^1.4.2",
+    "ldrs": "^1.1.7",
     "lomi.cli": "^2.0.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -53,9 +57,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.0.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.11.0",
+    "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2"
